--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "next start -p $PORT",
+    "start": "next start",
     "build": "next build",
     "dev": "next"
   },
