--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "next start",
     "build": "next build",
+    "postinstall": "npm run build",
     "dev": "next"
   },
   "dependencies": {
