--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "babel-plugin-css-modules-transform": "^1.2.7",
     "glamor": "^2.20.24",
     "next": "^2.1.1",
+    "next-redux-wrapper": "^1.0.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
-  }
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {}
 }
