--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "next"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-plugin-css-modules-transform": "^1.2.7",
     "glamor": "^2.20.24",
     "next": "^2.1.1",
@@ -17,6 +18,7 @@
     "nprogress": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
