--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start",
     "build": "next build",
     "postinstall": "npm run build",
+    "test": "standard --fix",
     "dev": "next"
   },
   "dependencies": {
@@ -24,5 +25,7 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "standard": "^10.0.2"
+  }
 }
