--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dnd-html5-backend": "^2.3.0",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
+    "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "underscore": "^1.8.3"
