--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dnd": "^2.3.0",
     "react-dnd-html5-backend": "^2.3.0",
     "react-dom": "^15.5.4",
+    "react-notify-toast": "^0.1.5",
     "react-redux": "^5.0.4",
     "react-select": "^1.0.0-rc.3",
     "redux": "^3.6.0",
