--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "glamor": "^2.20.24",
     "lodash": "^4.17.4",
     "lodash.isequal": "^4.5.0",
+    "moment": "^2.18.1",
     "next": "^2.1.1",
     "next-redux-wrapper": "^1.0.0",
     "nprogress": "^0.2.0",
